Fixed an issue with misaligned navbars

--- a/individual-portfolios/individual-styles.css
+++ b/individual-portfolios/individual-styles.css
@@ -49,23 +49,7 @@ header img {
     font-size: 16px;
 }
 
-a:link {
-    color: rgb(255, 255, 255);
-    background-color: transparent;
-    text-decoration: none;
-  }
-  
-  a:visited {
-    color: rgb(255, 255, 255);
-    background-color: transparent;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    color: rgb(255, 136, 0);
-    background-color: transparent;
-    text-decoration: none;
-  }
+
 
 .footer {
     background-color: #333;
